--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,11 @@
     <string name="are_you_feeling_sick">Are you Feeling sick</string>
     <string name="if_you_are_feeling_sick_with_any_of_the_covid_19_symptoms_please_cal_or_sms_us_immediately_for_help">If you are feeling sick with any of the covid-19 symptoms please cal or SMS us immediately for help</string>
     <string name="covid_19">COVID-19</string>
+    <string name="title_statistics">Statistics</string>
+    <string name="title_about">About</string>
+    <string name="affected">Affected</string>
+    <string name="deaths">Deaths</string>
+    <string name="recovered">Recovered</string>
+    <string name="active">Active</string>
+    <string name="serious">Serious</string>
 </resources>
