--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="yesterday">Yesterday</string>
     <string name="call_now">Call Now</string>
     <string name="send_sms">Send SMS</string>
+    <string name="daily_new_cases">Daily New Cases</string>
 
 
     <!--Trending fragment strings-->
