--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="call_now">Call Now</string>
     <string name="send_sms">Send SMS</string>
     <string name="daily_new_cases">Daily New Cases</string>
-    <string name="covid_19_app">Covid-19 App</string>
+    <string name="covid_19_app">Covid Status </string>
     <string name="version">Version</string>
     <string name="long_text">This is a test.This is a test.This is a test.This is a test.This is a test.This is a test.</string>
     <string name="_1_0">1.0</string>
